<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="NL_nl">
    <string name="app_name">Museumkaart</string>
    <string name="title_map">Kaart</string>
    <string name="title_visited">Bezocht</string>
    <string name="title_wish_list">Wenslijst</string>

    <string name="period_description">%1$s t/m %2$s</string>

    <!-- Details activity -->
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_opening_hours">Openingstijden</string>
    <string name="title_address">Adres</string>
    <string name="title_prices">Toegangsprijzen</string>
    <string name="title_exhibitions">Exposities</string>
    <string name="title_events">Activiteiten</string>
    <string name="title_promotions">Museumkaart acties</string>
    <string name="title_period">Looptijd</string>
    <string name="button_website">Website</string>

    <string name="details_error_text">De museumdetails konden niet geladen worden.</string>
    <string name="details_add_to_wish_list">Voeg toe aan wenslijst</string>
    <string name="details_remove_from_wish_list">Verwijder van wenslijst</string>
    <string name="details_navigate">Navigeer</string>
    <string name="details_mark_visited">Bezocht op…</string>
    <string name="details_visited_on">Bezocht op %s</string>
    <string name="button_retry">Probeer opnieuw</string>
    <string name="button_clear">Wis</string>

    <string name="listing_title_exhibition">Expositie</string>
    <string name="listing_title_event">Activiteit</string>
    <string name="listing_title_promotion">Museumkaart actie</string>
    <string name="listing_title_permanent">Collectie</string>
</resources>
